style.css
/* ... */
/****** NAVBAR START ******/

header {
  box-sizing: border-box;
  height: 48px;
  z-index: 11;
  box-shadow: 0 0 32px rgba(0, 0, 0, 0.15);
}

#mobile-nav {
  position: fixed;
  display: flex;
  width: 100%;
  align-items: center;
  top: 0;
  right: 0;
  height: 48px;
  background-color: white;
  z-index: 10;
}

#logo-div {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 106px;
  height: 48px;
  background-image: linear-gradient(
    to right bottom,
    rgb(204, 0, 153),
    rgb(255, 68, 34) 85%
  );
  cursor: pointer;
}

#logo {
  box-sizing: border-box;
  color: rgb(255, 68, 34);
  font-size: 14px;
  font-stretch: 100%;
  font-weight: 400;
  height: 16px;
  line-height: 21px;
  max-width: 100%;
}

#icons {
  display: flex;
  align-items: center;
  margin-left: auto;
}

.nav-icon {
  font-size: 25px;
  padding: 11.5px;
  border-left: 1px solid rgb(238, 238, 238);
  cursor: pointer;
}

.fa-bars {
  color: rgb(255, 68, 34);
  font-size: 20px;
}

.fa-search {
  color: #bbb;
  font-size: 20px;
}

.fa-search:hover {
  color: #777;
}

@media screen and (min-width: 768px) {
  header {
    height: 80px;
  }

  #mobile-nav {
    display: none;
  }

  #desktop-nav {
    display: flex;
    flex-direction: row;
    height: 80px;
  }

  #nav-bars {
    height: 80px;
    width: 100%;
  }

  #black-nav {
    display: flex;
    height: 32px;
    width: 100%;
    background-color: black;
  }

  #white-nav {
    height: 48px;
    width: 100%;
  }

  #black-nav a:first-child {
    color: white;
    margin-left: 18px;
  }

  #white-nav a:first-child {
    margin-left: 6px;
  }

  #black-nav a:last-child {
    padding-right: 20px;
  }

  .black-nav-link {
    color: hsla(0, 0%, 100%, 0.6);
    cursor: pointer;
    font-family: 'Work Sans', serif;
    font-size: 13px;
    font-stretch: 100%;
    font-weight: 400;
    line-height: 32px;
    text-decoration: none;
    margin-left: 12px;
  }

  #black-nav a:nth-child(7) {
    margin-left: auto;
  }

  .black-nav-link:hover {
    color: white;
  }

  .white-nav-link {
    color: rgb(170, 170, 170);
    cursor: pointer;
    font-family: 'Rajdhani', sans-serif;
    font-size: 15px;
    font-stretch: 100%;
    font-weight: 500;
    letter-spacing: 0.56px;
    line-height: 48px;
    padding: 0 12px;
    text-decoration: none;
    text-transform: uppercase;
    vertical-align: middle;
  }

  .white-nav-link:hover {
    color: black;
  }

  #big-logo-div {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    width: 106px;
    height: 80px;
    background-image: linear-gradient(
      to right bottom,
      rgb(204, 0, 153),
      rgb(255, 68, 34) 85%
    );
    cursor: pointer;
  }

  #big-logo {
    box-sizing: border-box;
    color: rgb(255, 68, 34);
    font-size: 14px;
    font-stretch: 100%;
    font-weight: 400;
    height: 16px;
    line-height: 21px;
    max-width: 100%;
  }
}

/****** NAVBAR END ******/

/****** MAIN ARTICLES START ******/

#main-articles {
  box-sizing: border-box;
  display: grid;
  grid-template-columns: auto;
  row-gap: 10px;
  padding: 10px;
  height: 620px;
}

#main-articles > * {
  cursor: pointer;
}

#main-article-1 {
  background-image: linear-gradient(
      to bottom,
      rgba(255, 255, 255, 0),
      rgb(0, 0, 0)
    ),
    url(./assets/images/tiktok.jpg);
  background-size: cover;
}

#main-article-2 {
  background-image: linear-gradient(
      to bottom,
      rgba(255, 255, 255, 0),
      rgb(0, 0, 0)
    ),
    url(./assets/images/eruptions.jpg);
  background-size: cover;
}

#main-article-3 {
  background-image: linear-gradient(
      to bottom,
      rgba(255, 255, 255, 0),
      rgb(0, 0, 0)
    ),
    url(./assets/images/hack.jpg);
  background-size: cover;
}

.main-content {
  position: relative;
  top: 45%;
  padding: 10px;
}

.main-date {
  margin-top: 5px;
  color: rgba(255, 255, 255, 0.6);
  cursor: pointer;
  font-family: 'Work Sans', sans-serif;
  font-size: 12px;
  font-stretch: 100%;
  font-weight: 400;
  line-height: 16px;
}

.main-headline {
  color: rgb(255, 255, 255);
  cursor: pointer;
  font-family: 'Work Sans', sans-serif;
  font-size: 20px;
  font-stretch: 100%;
  font-weight: 600;
  line-height: 22px;
  outline-color: rgb(255, 255, 255);
  outline-style: none;
  text-align: left;
  text-decoration-color: rgb(255, 255, 255);
  text-decoration-line: none;
  text-decoration-style: solid;
  text-rendering: optimizelegibility;
  vertical-align: baseline;
}

@media (min-width: 768px) {
  .main-content {
    padding-right: 20px;
  }

  article #main-content-2,
  article #main-content-3 {
    position: relative;
    top: 30%;
  }

  #main-articles {
    display: grid;
    grid-template-areas:
      'main-article-1 main-article-1 main-article-2'
      'main-article-1 main-article-1 main-article-3';
    column-gap: 10px;
    height: 410px;
  }

  #main-content-1 {
    top: 70%;
    padding-right: 20px;
  }

  #main-headline {
    font-size: 30px;
    line-height: 35px;
    font-weight: 700;
  }

  #main-article-1 {
    grid-area: main-article-1;
  }

  #main-article-2 {
    grid-area: main-article-2;
  }

  #main-article-3 {
    grid-area: main-article-3;
  }
}

@media (min-width: 1024px) {
  #main-content-1 {
    padding-right: 40px;
  }

  #main-articles {
    display: grid;
    grid-template-areas:
      'main-article-1 main-article-1 main-article-2'
      'main-article-1 main-article-1 main-article-3';
    column-gap: 10px;
    height: 510px;
  }

  article #main-content-2,
  article #main-content-3 {
    position: relative;
    top: 48%;
  }

  #main-article-1 {
    grid-area: main-article-1;
  }

  #main-article-2 {
    grid-area: main-article-2;
  }

  #main-article-3 {
    grid-area: main-article-3;
  }
}

/****** MAIN ARTICLES END ******/

/****** LATEST ARTICLES START ******/

#latest-section {
  margin-top: 50px;
}

#latest-section h2 {
  margin-left: 20px;
}
/* ... */

